fixed performance issues caused by background attachment on mobile devices

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -99,31 +99,6 @@ main {
     min-height: calc(100vh - 2*70px);
     backdrop-filter: opacity(0);
     background-blend-mode: lighten;
-    background-attachment: fixed;
-}
-
-main::before {
-    content: ' ';
-    position: absolute;
-    background-color: var(--secondary-background-color);
-    top: 36px;
-    bottom: 36px;
-    left: 0;
-    width: 100px;
-    z-index: -1;
-    opacity: .5;
-}
-
-main::after {
-    content: ' ';
-    position: absolute;
-    background-color: var(--secondary-background-color);
-    bottom: 36px;
-    top: 36px;
-    right: 0;
-    width: 100px;
-    z-index: -1;
-    opacity: .5;
 }
 
 footer {
